app/assets/stylesheets/welcome.css.scss
/* ============================================================
  SECTIONS
============================================================ */
section {
  min-height: 100vh;
  width: 100%;
  width: 100vw;
}
.module:last-child {
  margin-bottom: 0;
}
.module h2 {
  margin-bottom: 40px;
  font-family: "Roboto Slab", serif;
  font-size: 30px;
}
.module p {
  // margin-bottom: 1rem;
  font-size: 1rem;
  font-weight: 300;
  &:not(:first-child) {
    margin-top: 0.5rem;
  }
}
.module {
  &.content {
    padding: 2rem 0;
    position: relative;
    &.half {
      height: 39vh;
    }
    &.full {
      min-height: 89vh;
    }
  }
  &.parallax {
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    width: 100%; // fallback
    width: 100vw;
    height: 600px; // fallback
    height: 100vh;
    // h1 {
    //   color: rgba(255, 255, 255, 0.8);
    //   font-size: 48px;
    //   line-height: 600px;
    //   font-weight: 700;
    //   text-align: center;
    //   text-transform: uppercase;
    //   text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    // }
    &.full {
      height: 100vh;
    }
  }
  &#intro {
    background-image: url('antarctica_dms.jpg');
  }
  &#projects {
    // background-image: url('access-early-morning-test.jpg');
    background-image: url('bopps_nightstarshot.jpg');
  }
  &#background {
    background-image: url('kingfire_oli.jpg');
  }
  &#contact {
    background-image: url('arctic_plane.jpg')
  }
  &.title {
    height: 11vh;
  }
  // .container {
  //   position: absolute;
  //   top: 50%;
  //   left: 50%;
  //   transform: translate(-50%, -50%);
  // }
}

// @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait){
//   .full {
//     height: 1024px;
//   }
//   .title {
//     height: 102px;
//   }
// }
 
// /** 
//  * iPad with landscape orientation.
//  */
// @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:landscape){
//   .full {
//     height: 768px;
//   }
//   .title {
//     height: 76px;
//   }
// }
 
// /**
//  * iPhone 5
//  * You can also target devices with aspect ratio.
//  */
// @media screen and (device-aspect-ratio: 40/71) {
//   section.full {
//     height: 1136px;
//   }
//   section.title {
//     height: 113px;
//   }
// }

@media all and (min-width: 600px) {
  section.module h2 {
    font-size: 42px;
  }
  section.module p {
    font-size: 20px;
  }
  section.module.parallax h1 {
    font-size: 96px;
  }
  .mobile-only {
    display: none;
  }
  .wide-only {
    display: block;
  }
}
@media all and (min-width: 960px) {
  section.module.parallax h1 {
    font-size: 160px;
  }
}
@media all and (max-width: 600px) {
  .col.quarter, .col.three-quarters, .col.fifth, .col.four-fifths {
    width: 100%;
    margin: 0 0 2rem 0;
    float: none;
  }
  .col.fifth, .col.four-fifths {
    margin: 0;
  }
  .module.content {
    .full {
      min-height: 89vh;
    }
  }
  .mobile-only {
    display: block;
  }
  .wide-only {
    display: none;
  }
}

@keyframes fadeIO {
  0%   { opacity:0; }
  // 50%  { opacity:0; }
  100% { opacity:1; }
}
@-o-keyframes fadeIO{
  0%   { opacity:0; }
  // 50%  { opacity:0; }
  100% { opacity:1; }
}
@-moz-keyframes fadeIO{
  0%   { opacity:0; }
  // 50%  { opacity:0; }
  100% { opacity:1; }
}
@-webkit-keyframes fadeIO{
  0%   { opacity:0; }
  // 50%  { opacity:0; }
  100% { opacity:1; }
}

div.arrow {
  position: absolute;
  bottom: 3.5rem;
  width: 100%;
  text-align: center;
  i.animate-fade {
    // font-size: 2rem;
     -webkit-animation: fadeIO 4s;
     -moz-animation: fadeIO 4s;
     -o-animation: fadeIO 4s;
      animation: fadeIO 4s;
  }
}

i {
  font-size: 2rem;
}

.animate-icon {
  padding: 1% 5% 1% 0;
  text-align: center;
  svg {
    max-width: 50vw;
  }
}

small {
  display: block
}

.close {
  margin-bottom: 0.5rem;
}

